--- a/src/app/ui/components/order/order-summary/order-summary.component.html
+++ b/src/app/ui/components/order/order-summary/order-summary.component.html
@@ -26,7 +26,7 @@
             <div class="product-info">
               <div class="brand">{{item.brandName}}</div>
               <div class="name">{{item.productName}}</div>
-              <div class="title">{{item.title}}</div>
+              <div class="title">{{item.productTitle}}</div>
               <!-- Ürün özellikleri -->
               <div class="features">
                 <div *ngFor="let feature of item.productFeatureValues" class="feature">
