--- a/src/app/ui/components/category/categories-sidebar/categories-sidebar.component.scss
+++ b/src/app/ui/components/category/categories-sidebar/categories-sidebar.component.scss
@@ -73,6 +73,11 @@ $link-color: #0000ee;
     padding: 0 15px 60px 15px;
 
    .category-button{
+      img{
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+      }
       background: white;
       color: black;
       border: none;
