--- a/src/app/ui/components/login/login.component.html
+++ b/src/app/ui/components/login/login.component.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="forgot-password">
-        <a routerLink="/reset-password">Forgot Password?</a>
+        <a routerLink="/password-reset">Forgot Password?</a>
       </div>
 
       <button type="submit" class="btn-login">Sign In</button>
