--- a/src/app/ui/components/product/product-detail/product-detail.component.html
+++ b/src/app/ui/components/product/product-detail/product-detail.component.html
@@ -42,26 +42,23 @@
       {{product.name}}
       {{product.title}}
     </p>
-    <div class="product-ratings">
-      <!-- Add star rating component here -->
-      <span class="rating-score">4.8</span>
-      <span class="rating-count">(1000+ Değerlendirme)</span>
-      <div class="like-container">
-        <i class="heart-icon" 
-           [ngClass]="{'liked': product.isLiked}"
-           (click)="toggleLike($event, product)">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
-          </svg>
-        </i>
-      </div>
+    <div class="like-button-container">
+      <button class="Btn" [class.liked]="product?.isLiked" (click)="toggleLike($event, product)">
+        <span class="leftContainer">
+          <svg fill="white" viewBox="0 0 512 512" height="1em" xmlns="http://www.w3.org/2000/svg"><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"></path></svg>
+          <!-- <span class="like">{{ product?.isLiked ? 'Liked' : 'Like' }}</span> -->
+        </span>
+        <span class="likeCount">
+          {{ likeCount | number }}
+        </span>
+      </button>
     </div>
     <p class="product-price">{{formatCurrency(product.price)}}</p>
 
     
 
     <p class="product-stock" [class.in-stock]="product.stock > 0">
-      {{product.stock > 0 ? 'Stokta' : 'Stokta Yok'}}
+      {{product.stock > 0 ? 'In Stock' : 'Out of stock'}}
     </p>
     <p class="product-sku">SKU: {{product.sku}}</p>
 
@@ -124,13 +121,13 @@
 
   <div class="tab-content" [ngSwitch]="activeTab">
     <div *ngSwitchCase="'description'">
-      <p [innerHTML]="product.description | safeHtml"></p>
+      <p *ngIf="product?.description" [innerHTML]="product.description | safeHtml"></p>
     </div>
-    <div *ngSwitchCase="'reviews'">
+    <!-- <div *ngSwitchCase="'reviews'">
       <h2>Değerlendirmeler</h2>
       
     </div>
-    <!--
+    
     <div *ngSwitchCase="'questions'">
       <h2>Soru & Cevap</h2>
      
