--- a/src/app/ui/components/product/product-detail/product-detail.component.scss
+++ b/src/app/ui/components/product/product-detail/product-detail.component.scss
@@ -41,6 +41,120 @@ $link-color: #0000ee;
   }
 }
 
+.like-button-container {
+  display: flex;
+  align-items: center;
+  margin: 1rem 0;
+
+  .Btn {
+    width: 160px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border: none;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.089);
+    cursor: pointer;
+    background-color: transparent;
+    transition: all 0.3s ease;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+  
+    .leftContainer {
+      width: 50%;
+      height: 100%;
+      background-color: rgb(238, 0, 0);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      transition: all 0.3s ease;
+  
+      svg {
+        transition: transform 0.3s ease;
+        height: 1.2em;
+      }
+  
+      .like {
+        color: white;
+        font-weight: 600;
+      }
+    }
+  
+    .likeCount {
+      width: 50%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: rgb(238, 0, 0);
+      font-weight: 600;
+      position: relative;
+      background-color: white;
+  
+      &::before {
+        height: 8px;
+        width: 8px;
+        position: absolute;
+        content: "";
+        background-color: rgb(255, 255, 255);
+        transform: rotate(45deg);
+        left: -4px;
+      }
+    }
+  
+    &:hover .leftContainer {
+      background-color: rgb(219, 0, 0);
+    }
+  
+    &:active {
+      .leftContainer {
+        background-color: rgb(201, 0, 0);
+        
+        svg {
+          transform: scale(1.15);
+          transform-origin: top;
+        }
+      }
+    }
+
+    // Liked durumu için yeni stiller
+    &.liked {
+      .leftContainer {
+        background-color: white;
+        //border: 1px solid rgb(238, 0, 0);
+        
+        svg {
+          fill: rgb(238, 0, 0);
+        }
+        
+        .like {
+          color: rgb(238, 0, 0);
+        }
+      }
+      
+      .likeCount {
+        background-color: rgb(238, 0, 0);
+        color: white;
+        
+        &::before {
+          background-color: rgb(238, 0, 0);
+        }
+      }
+
+      &:hover {
+        .leftContainer {
+          background-color: rgba(238, 0, 0, 0.1);
+        }
+      }
+    }
+  }
+}
+
 .like-container {
   position: relative;
   display: inline-block;
